--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <body>
 
 <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
+ <a>
+   <img src="ninni.png">
+  </a>
 
 </body>
 </html> 
